# win_rbin

./: A1_rust_rule.bat  A1_rust_rule.sh  README.md
A1_rust_rule/: Cargo.toml
A1_rust_rule/src/: main.rs
