[package]
name = "A1_rust_rule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[source.crates-io]
#replace-with = 'ustc'

#[source.ustc]
#registry = "https://mirrors.ustc.edu.cn/crates.io-index"


#[source.crates-io]
#replace-with = 'tuna'
#[source.tuna]
#registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"





[dependencies]
num-traits = "0.2.*"
num-integer = "0.1.*"
winapi  = "0.3.*"
time  = "0.3.*"
dotenv = "0.15.*"
stdext = "0.3.*"
walkdir = "2"
lazy_static= "1.4.0"
utf8_slice = "1.0.0"
log = "0.4"
tracing = "0.1"  
tracing-subscriber = "0.2.0"
chrono  = "0.4.*"
rand="0.7.3"
aes="0.8.2"
des="0.8.1"
ecb="0.1.1"
cipher="0.4.3"
hex-literal="0.3.4"
hex="0.4.3"
block-modes="0.8.1"